crates/rattler-bin/src/snapshots/rattler__tests__help-link.snap
---
source: crates/rattler-bin/src/main.rs
expression: redact(subcommand.render_long_help().to_string())
---
Link an extracted package into a prefix

Usage: rattler link [OPTIONS] --destination <DESTINATION> <PACKAGE_DIR>

Arguments:
  <PACKAGE_DIR>
          The package directory to link from

Options:
  -d, --destination <DESTINATION>
          Destination directory where the package will be linked into

  -v, --verbose
          Log verbose

      --offline
          Disable network access and use only locally cached data

  -h, --help
          Print help
