crates/rattler-bin/src/snapshots/rattler__tests__help-list.snap
---
source: crates/rattler-bin/src/main.rs
expression: redact(subcommand.render_long_help().to_string())
---
Search for packages in conda channels using glob or regex patterns

Usage: rattler list [OPTIONS] [NAME]

Arguments:
  [NAME]
          The name (or glob) of the packages to list

Options:
  -p, --prefix <TARGET_PREFIX>
          Target prefix (environment path) to list
          
          [env: CONDA_PREFIX=]
          [alias: --target-prefix]

  -f, --full-name
          Match full names only

  -v, --verbose
          Log verbose

      --offline
          Disable network access and use only locally cached data

  -h, --help
          Print help

Examples:
  rattler list -p /path/to/environment
