crates/rattler-bin/src/snapshots/rattler__tests__help-remove-from-prefix.snap
---
source: crates/rattler-bin/src/main.rs
expression: redact(subcommand.render_long_help().to_string())
---
Remove one or more installed conda packages from a prefix without solving

Usage: rattler remove-from-prefix [OPTIONS] <PACKAGES>...

Arguments:
  <PACKAGES>...
          Exact package names of installed packages to remove

Options:
  -p, --prefix <TARGET_PREFIX>
          Target prefix to remove the package from
          
          [default: .prefix]

      --skip-compatibility-checks
          Skip dependency compatibility checks after removal

  -v, --verbose
          Log verbose

      --offline
          Disable network access and use only locally cached data

  -h, --help
          Print help
