crates/rattler-bin/src/snapshots/rattler__tests__help-run.snap
---
source: crates/rattler-bin/src/main.rs
expression: redact(subcommand.render_long_help().to_string())
---
Run a command in an activated conda environment

Usage: rattler run [OPTIONS] <COMMAND>...

Arguments:
  <COMMAND>...
          Program and arguments to run

Options:
  -p, --prefix <TARGET_PREFIX>
          Target prefix (environment path) to run the command in. Defaults to the active conda environment ($`CONDA_PREFIX`), then `.prefix` in the current directory
          
          [env: CONDA_PREFIX=]
          [default: .prefix]
          [alias: --target-prefix]

      --cwd <CWD>
          Working directory for the child process

  -v, --verbose
          Log verbose

      --offline
          Disable network access and use only locally cached data

  -h, --help
          Print help
