crates/rattler-bin/src/snapshots/rattler__tests__help-search.snap
---
source: crates/rattler-bin/src/main.rs
expression: redact(subcommand.render_long_help().to_string())
---
Search for packages in conda channels using glob or regex patterns

Usage: rattler search [OPTIONS] <MATCHSPEC>

Arguments:
  <MATCHSPEC>
          The matchspec pattern to search for.
          
          Supports exact names (python), glob patterns (python*, *ssl*), and regex patterns (^numpy-.*$).

Options:
  -c, --channels <CHANNELS>
          Channels to search in
          
          [default: conda-forge]

  -p, --platform <PLATFORM>
          Platform to search for
          
          [default: [PLATFORM]]

      --limit-packages <LIMIT_PACKAGES>
          Maximum number of packages to display
          
          [default: 3]

      --limit <LIMIT>
          Maximum number of versions to display per package
          
          [default: 5]

      --all
          Show all packages and versions (no limits)

      --sharded <SHARDED>
          Enable sharded repodata
          
          [default: true]
          [possible values: true, false]

      --json
          Output in JSON format

      --urls-only
          Only print the URLs of the matching packages, one per line

  -v, --verbose
          Log verbose

      --offline
          Disable network access and use only locally cached data

  -h, --help
          Print help (see a summary with '-h')

Examples:
  rattler search 'python*'            # glob pattern
  rattler search '^numpy-.*$'         # regex pattern
  rattler search openssl -c bioconda  # search in specific channel
  rattler search xtensor --urls-only  # print only the package urls
