crates/rattler-bin/src/snapshots/rattler__tests__help-shell-hook.snap
---
source: crates/rattler-bin/src/main.rs
expression: redact(subcommand.render_long_help().to_string())
---
Print the shell activation hook for a conda prefix to stdout

Usage: rattler shell-hook [OPTIONS]

Options:
  -p, --prefix <TARGET_PREFIX>
          Target prefix (environment path) to generate the shell hook for
          
          [default: .prefix]
          [alias: --target-prefix]

  -s, --shell <SHELL>
          Shell to generate the hook for (bash, zsh, fish, xonsh, cmd, nushell, powershell, brush)

  -v, --verbose
          Log verbose

      --offline
          Disable network access and use only locally cached data

  -h, --help
          Print help
