crates/rattler-bin/src/snapshots/rattler__tests__help-upload.snap
---
source: crates/rattler-bin/src/main.rs
expression: redact(subcommand.render_long_help().to_string())
---
Upload options

Usage: rattler upload [OPTIONS] [PACKAGE_FILES]... <COMMAND>

Commands:
  quetz        Upload to a Quetz server. Authentication is used from the keychain / auth-file
  artifactory  Options for uploading to an Artifactory channel
  prefix       Options for uploading to a prefix.dev server. Authentication is used from the keychain / auth-file
  anaconda     Options for uploading to a Anaconda.org server
  cloudsmith   Options for uploading to a Cloudsmith repository. Authentication is used from the keychain / auth-file
  s3           Options for uploading to S3
  help         Print this message or the help of the given subcommand(s)

Arguments:
  [PACKAGE_FILES]...
          The package file to upload

Options:
      --allow-insecure-host <ALLOW_INSECURE_HOST>
          List of hosts for which SSL certificate verification should be skipped

  -v, --verbose
          Log verbose

      --offline
          Disable network access and use only locally cached data

  -h, --help
          Print help
